--- a/kaniko/executor-latest/Dockerfile
+++ b/kaniko/executor-latest/Dockerfile
@@ -1,1 +1,8 @@
-FROM gcr.io/kaniko-project/executor:latest
+FROM gcr.io/kaniko-project/executor:latest AS plugin
+ 
+FROM jenkins/jnlp-agent-docker:latest
+ENV DOCKER_CONFIG /kaniko/.docker
+
+COPY --from=plugin /kaniko/executor /usr/local/bin/kaniko
+RUN mkdir -p /kaniko/.docker/
+COPY config.json /kaniko/.docker/
