--- a/kaniko/executor-latest/Dockerfile
+++ b/kaniko/executor-latest/Dockerfile
@@ -1,4 +1,4 @@
 FROM gcr.io/kaniko-project/executor:latest AS plugin
  
 FROM jenkins/jnlp-agent-docker:latest
-COPY --from=plugin /kaniko/executor /usr/local/bin/kaniko
+COPY --from=plugin /kaniko /kaniko
